flux/apps/plex/plex_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: registry.lab.reisman.org/proxy.docker.io/plexinc/pms-docker:1.41.2.9200-c6bbc1b53
          imagePullPolicy: IfNotPresent
          ports:
            - name: plex
              containerPort: 32400
          volumeMounts:
            - mountPath: /config
              name: plex-config
            - mountPath: /data
              name: plex-data
        - name: config-sync
          image: debian:stable-slim
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            [
              "apt update; apt install -y rsync; while true; do rsync -rlptv --delete /config-active/ /config-backup; sleep 60; done",
            ]
          volumeMounts:
            - mountPath: /config-backup
              name: plex-config-source
            - mountPath: /config-active
              name: plex-config
      volumes:
        - name: plex-config-source
          persistentVolumeClaim:
            claimName: config-pvc
        - name: plex-config
          emptyDir: {}
        - name: plex-data
          nfs:
            server: 192.168.1.10
            path: /mnt/main/plex
            readOnly: true
