flux/apps/plex/plex_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.11
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
