flux/apps/plex/tubesync_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubesync
  namespace: plex
spec:
  selector:
    app: tubesync
  ports:
  - port: 80
    targetPort: http
