flux/apps/plex/tubesync_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubesync
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "tubesync.reisman.org"
      secretName: tubesync-tls
  rules:
    - host: "tubesync.reisman.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "tubesync"
                port:
                  number: 80
